--- a/uber-clone/package.json
+++ b/uber-clone/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "precommit": "lint-staged",
     "postinstall": "node -e \"if(require('fs').existsSync('.git')){process.exit(1)}\" || is-ci || husky install",
-    "pre-commit": "next lint"
+    "pre-commit": "yarn lint"
   },
   "lint-staged": {
        "*.js": ["eslint --fix", "git add"]
