--- a/uber-clone/.eslintrc.json
+++ b/uber-clone/.eslintrc.json
@@ -20,6 +20,9 @@
     "rules": {
         "react/react-in-jsx-scope":"off",
         "react/prop-types":"off",
-        "react/jsx-props-no-spreading":"off"
+        "react/jsx-props-no-spreading":"off",
+        "linebreak-style": "off"
+
     }
+    
 }
