--- a/uber-clone/package.json
+++ b/uber-clone/package.json
@@ -12,19 +12,30 @@
     "pre-commit": "yarn lint"
   },
   "lint-staged": {
-       "*.js": ["eslint --fix", "git add"]
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "dependencies": {
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "tailwind-styled-components": "^2.1.7"
   },
   "devDependencies": {
+    "@types/node": "^17.0.33",
+    "@types/react": "^18.0.9",
+    "autoprefixer": "^10.4.7",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.1.6",
     "eslint-plugin-react": "^7.28.0",
     "husky": "^8.0.1",
-    "lint-staged": "^12.4.1"
+    "lint-staged": "^12.4.1",
+    "mapbox-gl": "^2.8.2",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.4"
   }
 }
